src/objects/LTX_Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>LTX_Bank_Account__c</fullName>
        <label>Bank Account</label>
        <referenceTo>LTX_Bank_Account__c</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LTX_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LTX_Disbursement_End_Date__c</fullName>
        <label>Disbursement End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LTX_Disbursement_Start_Date__c</fullName>
        <label>Disbursement Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Disbursement</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Disbursement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>